Creacion de DTO y parte del CORS para manejar los productos del catálogo